remove ignored files